--- a/index.html
+++ b/index.html
@@ -4,19 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <h1>About Me</h1>
+        <h1>Natallia Stelmakh</h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"> -->
+              <!-- <span class="navbar-toggler-icon"></span> -->
+            </button>
+            <!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> -->
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="index.html">About</a>
+                <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link active" href="contact.html">Contact</a>
+             </div>
+          </nav>
     </header>
     <figure>
-        <img src="" alt="My photo">
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/rick-and-morty-season-4-trailer-1-1570450125.jpg?crop=0.564xw:1.00xh;0,0&resize=768:*" alt="My photo">
         <figcaption>Never stop learning and exploring</figcaption>
     </figure>
 
     <article>
+        <h2>About Me</h2>
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, laudantium ut alias rerum laboriosam obcaecati molestiae est non. Illum officia libero sint numquam placeat repellat expedita! Libero rem iure nostrum.
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae similique perferendis quia soluta totam officiis quod omnis asperiores ab. Eaque corporis exercitationem laboriosam eum quae officiis rerum veritatis! In, dolorum.
     </article>
