Basic structure in all html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
     <header>
@@ -23,14 +23,15 @@
           </nav>
     </header>
     <figure>
-        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/rick-and-morty-season-4-trailer-1-1570450125.jpg?crop=0.564xw:1.00xh;0,0&resize=768:*" alt="My photo">
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/rick-and-morty-season-4-trailer-1-1570450125.jpg?crop=0.564xw:1.00xh;0,0&resize=768:*" class="img-fluid"  class="img-thumbnail" alt="My photo">
         <figcaption>Never stop learning and exploring</figcaption>
     </figure>
 
     <article>
         <h2>About Me</h2>
-       Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, laudantium ut alias rerum laboriosam obcaecati molestiae est non. Illum officia libero sint numquam placeat repellat expedita! Libero rem iure nostrum.
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, laudantium ut alias rerum laboriosam obcaecati molestiae est non. Illum officia libero sint numquam placeat repellat expedita! Libero rem iure nostrum.
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae similique perferendis quia soluta totam officiis quod omnis asperiores ab. Eaque corporis exercitationem laboriosam eum quae officiis rerum veritatis! In, dolorum.
+       </p> 
     </article>
 
 
