Added style, changed bio, made colored h1, non-responsive image

--- a/index.html
+++ b/index.html
@@ -3,37 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/b77b17d9f7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>About</title>
 </head>
 <body>
+    <!-- Parts of the portfolio: -->
+<!-- * Navbar must be consistent on each page. -->
+
+<!-- * Navbar on each page must contain links to Home/About, Contact, and Portfolio pages. -->
+
+<!-- * All links must work. -->
+
+<!-- * Must use semantic html. -->
+
+<!-- * Each page must have valid and correct HTML. (use a validation service) -->
+
+<!-- * Must contain your personalized information. (bio, name, images, links to social media, etc.) -->
+
+<!-- * Must properly utilize Bootstrap components and grid system. -->
+
+<!-- 1)Here is the the header with name and nav bar -->
     <header>
-        <h1>Natallia Stelmakh</h1>
+
+        <h1> Natallia Stelmakh</h1>
+
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"> -->
-              <!-- <span class="navbar-toggler-icon"></span> -->
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span> 
             </button>
-            <!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> -->
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
+
+                 <!-- <span class="navbar-brand mb-0 h1">Natallia Stelmakh</span> -->
                 <a class="nav-item nav-link active" href="index.html">About</a>
                 <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link active" href="contact.html">Contact</a>
              </div>
           </nav>
     </header>
+    <div class="container">
     <figure>
-        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/rick-and-morty-season-4-trailer-1-1570450125.jpg?crop=0.564xw:1.00xh;0,0&resize=768:*" class="img-fluid"  class="img-thumbnail" alt="My photo">
-        <figcaption>Never stop learning and exploring</figcaption>
+        <img src="C:\Users\Dragonfly\Documents\Portfolio\IMG_20200120_100525.jpg" alt="My photo" class="rounded">
+        <figcaption>Never stop learning </figcaption>
     </figure>
 
     <article>
         <h2>About Me</h2>
-       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, laudantium ut alias rerum laboriosam obcaecati molestiae est non. Illum officia libero sint numquam placeat repellat expedita! Libero rem iure nostrum.
-       Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae similique perferendis quia soluta totam officiis quod omnis asperiores ab. Eaque corporis exercitationem laboriosam eum quae officiis rerum veritatis! In, dolorum.
+       <p>
+        Hi!My name is Natallia, and I am a Full-Stack Developer, currently living in North Jersey. 
+        My primary focus and inspiration for my studies is Web Development. I am both driven and self-motivated, and I am constantly experimenting with new technologies and techniques.
+        I always have been passionate about science and technology, and strive to better myself as a developer.
+
        </p> 
     </article>
+    </div>
 
+
+     <!-- here is sticky footer with links on my git and linkedin -->
+    <footer>
+        <div class="container">
+            <a href="https://github.com/nata-stelmakh"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/natallia-stelmakh-29b6001a6/"><i class="fab fa-linkedin"></i></a>
+        </div>
+    </footer>
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
