--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
     <header>
         <h1>Natallia Stelmakh</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"> -->
-              <!-- <span class="navbar-toggler-icon"></span> -->
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"> -->
+              <span class="navbar-toggler-icon"></span> 
             </button>
-            <!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> -->
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="index.html">About</a>
                 <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
