--- a/contact.html
+++ b/contact.html
@@ -8,20 +8,44 @@
     <title>Contact</title>
 </head>
 <body>
-    <header>
-        <h1>Natallia Stelmakh</h1>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"> -->
-              <span class="navbar-toggler-icon"></span> 
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index.html">About</a>
-                <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link active" href="contact.html">Contact</a>
-             </div>
-          </nav>
-    </header>
+  <header>
+
+    <!-- <div class="container"> -->
+    <h1> Natallia Stelmakh</h1>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span> 
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+
+             <!-- <span class="navbar-brand mb-0 h1">Natallia Stelmakh</span> -->
+            <a class="nav-item nav-link active" href="index.html">About</a>
+            <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link active" href="contact.html">Contact</a>
+         </div>
+        </div>
+      </nav>
+    <!-- </div> -->
+</header>
+<div class="container">
+  <div class="form-group">
+    <label for="usr">Name:</label>
+    <input type="text" class="form-control" id="usr" placeholder="Name">
+  </div>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Your Email">
+    <div class="input-group-append">
+      <span class="input-group-text">@example.com</span>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="comment">Message:</label>
+    <textarea class="form-control" rows="5" id="comment"placeholder="Your message"></textarea>
+  </div>
+  <button type="button" class="btn btn-outline-success">Submit</button>
+</div>
 
     
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
