--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 <!-- * Must properly utilize Bootstrap components and grid system. -->
 
 <!-- 1)Here is the the header with name and nav bar -->
-    <header>
-
+   
+       <header>
+        <!-- <div class="container"> -->
         <h1> Natallia Stelmakh</h1>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -41,7 +42,9 @@
                 <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link active" href="contact.html">Contact</a>
              </div>
+            </div>
           </nav>
+          <!-- </div> -->
     </header>
     <div class="container">
     <figure>
