Portfo;io created as separate cards

--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
     <!-- </div> -->
 </header>
 <div class="container">
+  <h2>Contact Me</h2>
   <div class="form-group">
     <label for="usr">Name:</label>
     <input type="text" class="form-control" id="usr" placeholder="Name">
