Added comments in the code

--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
 </header>
 <div class="container">
   <h2>Contact Me</h2>
+  <!-- added form group  -->
   <div class="form-group">
     <label for="usr">Name:</label>
     <input type="text" class="form-control" id="usr" placeholder="Name">
@@ -45,6 +46,7 @@
     <label for="comment">Message:</label>
     <textarea class="form-control" rows="5" id="comment"placeholder="Your message"></textarea>
   </div>
+  <!-- Add button to submit -->
   <button type="button" class="btn btn-outline-success">Submit</button>
 </div>
 
