--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,39 @@
           <p class="card-text">Imaginarium</p>
         </div>
       </div>
+
+      <!-- <div class="card-deck">
+  <div class="card">
+    <img src="https://onplanners.com/sites/default/files/styles/template_fancy/public/template-images/printable-dated-daily-planner-do-list-template_1.png" class="card-img-top" alt="organizer">
+    <div class="card-body">
+      <h5 class="card-title">Daily Organizer</h5>
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/poker-pokerchips-dice-cards-gamble-cardgames-strategy-gift-thomas-larch.jpg" class="card-img-top" alt="pile of poker cards">
+      <div class="card-body">
+      <h5 class="card-title">Poker Game</h5>
+  </div>
+  </div>
+  <div class="card">
+    <img src="https://images.squarespace-cdn.com/content/v1/575b2f7959827e0c212226ad/1531967209491-V74BZDFN3GPMRB255R7S/ke17ZwdGBToddI8pDm48kGP9fSRXfcN-0p9GcWKw26hZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVEAyM429cUOF-3Nd0Sg076UTt-LI8q9z4xyKSdQS5hmZKeIPHZM_JvY3dXP5Zi8_Xo/Textbooks-Physical-Digital-3.jpg" class="card-img-top" alt="pile of books">
+        <div class="card-body">
+      <h5 class="card-title">Bookstore</h5>
+  </div>
+  </div>
+  <div class="card">
+    <img src="https://cdn.vox-cdn.com/thumbor/AgVjtGmyeAW6nBmPvnuZSZvp9KE=/0x0:2200x1237/1200x675/filters:focal(612x398:964x750)/cdn.vox-cdn.com/uploads/chorus_image/image/62747737/Habit_Forming.0.png" class="card-img-top" alt="digital organizer">
+      <div class="card-body">
+      <h5 class="card-title">Habit Tracker</h5>
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://cf.geekdo-images.com/opengraph/img/boQN3GndOWetprL1jrrQyPfgRCE=/fit-in/1200x630/pic3809813.jpg" class="card-img-top" alt="cover of a board game">
+        <div class="card-body">
+      <h5 class="card-title">Imaginarium</h5>
+    </div>
+  </div> -->
+</div>
     </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
