--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/b77b17d9f7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Portfolio</title>
@@ -26,7 +27,10 @@
     <div class="container">
       <!-- List of projects created as cards
       Added alt attributes -->
-      <div class="card" style="width: 18rem;">
+      <!-- applied grid system -->
+      <div class="row">
+
+       <div class="card" style="width: 18rem;">
         <img src="https://onplanners.com/sites/default/files/styles/template_fancy/public/template-images/printable-dated-daily-planner-do-list-template_1.png" class="card-img-top" alt="organizer">
         <div class="card-body">
           <p class="card-text">Daily Organizer</p>
@@ -44,6 +48,8 @@
           <p class="card-text">Bookstore</p>
         </div>
       </div>
+      </div>
+      <div class="row">
       <div class="card" style="width: 18rem;">
         <img src="https://cdn.vox-cdn.com/thumbor/AgVjtGmyeAW6nBmPvnuZSZvp9KE=/0x0:2200x1237/1200x675/filters:focal(612x398:964x750)/cdn.vox-cdn.com/uploads/chorus_image/image/62747737/Habit_Forming.0.png" class="card-img-top" alt="digital organizer">
         <div class="card-body">
@@ -55,7 +61,10 @@
         <div class="card-body">
           <p class="card-text">Imaginarium</p>
         </div>
+        </div>
       </div>
+
+      <!-- Lower is alternative way, in process of testing -->
 
       <!-- <div class="card-deck">
   <div class="card">
@@ -90,6 +99,13 @@
   </div> -->
 </div>
     </div>
+
+    <footer>
+      <div class="container">
+          <a href="https://github.com/nata-stelmakh"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/natallia-stelmakh-29b6001a6/"><i class="fab fa-linkedin"></i></a>
+      </div>
+  </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
