--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,9 @@
       <!-- List of projects created as cards
       Added alt attributes -->
       <!-- applied grid system -->
-      <div class="row">
+         <div class="row">
        <div class="col-md-4">
-       <div class="card" style="width: 18rem;">
+       <div class="card" style="width: 18rem;" >
         <img src="https://onplanners.com/sites/default/files/styles/template_fancy/public/template-images/printable-dated-daily-planner-do-list-template_1.png" class="card-img-top" alt="organizer">
         <div class="card-body">
           <p class="card-text">Daily Organizer</p>
@@ -38,8 +38,8 @@
        </div>
       </div>
       <div class="col-md-4">
-      <div class="card" style="width: 18rem;">
-        <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/poker-pokerchips-dice-cards-gamble-cardgames-strategy-gift-thomas-larch.jpg" class="card-img-top" alt="pile of poker cards">
+      <div class="card" style="width: 18rem;"  >
+        <img  src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/poker-pokerchips-dice-cards-gamble-cardgames-strategy-gift-thomas-larch.jpg" class="card-img-top" alt="pile of poker cards">
         <div class="card-body">
           <p class="card-text">Poker Game</p>
         </div>
@@ -47,7 +47,7 @@
       </div>
       <div class="col-md-4">
       <div class="card" style="width: 18rem;">
-        <img src="https://images.squarespace-cdn.com/content/v1/575b2f7959827e0c212226ad/1531967209491-V74BZDFN3GPMRB255R7S/ke17ZwdGBToddI8pDm48kGP9fSRXfcN-0p9GcWKw26hZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVEAyM429cUOF-3Nd0Sg076UTt-LI8q9z4xyKSdQS5hmZKeIPHZM_JvY3dXP5Zi8_Xo/Textbooks-Physical-Digital-3.jpg" class="card-img-top" alt="pile of books">
+        <img class="card-img-top" src="https://images.squarespace-cdn.com/content/v1/575b2f7959827e0c212226ad/1531967209491-V74BZDFN3GPMRB255R7S/ke17ZwdGBToddI8pDm48kGP9fSRXfcN-0p9GcWKw26hZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVEAyM429cUOF-3Nd0Sg076UTt-LI8q9z4xyKSdQS5hmZKeIPHZM_JvY3dXP5Zi8_Xo/Textbooks-Physical-Digital-3.jpg" class="card-img-top" alt="pile of books">
         <div class="card-body">
           <p class="card-text">Bookstore</p>
         </div>
@@ -56,7 +56,7 @@
       </div>
       <div class="row">
         <div class="col-md-4">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 18rem;" style="height: 18rem;">
         <img src="https://cdn.vox-cdn.com/thumbor/AgVjtGmyeAW6nBmPvnuZSZvp9KE=/0x0:2200x1237/1200x675/filters:focal(612x398:964x750)/cdn.vox-cdn.com/uploads/chorus_image/image/62747737/Habit_Forming.0.png" class="card-img-top" alt="digital organizer">
         <div class="card-body">
           <p class="card-text">Habit tracker</p>
@@ -72,6 +72,7 @@
         <div class="col-md-4"></div>
         </div>
       </div>
+      
 
       <!-- Lower is alternative way, in process of testing -->
 
