added copyright sign

--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,8 @@
   <div class="container">
       <a href="https://github.com/nata-stelmakh"><i class="fab fa-github"></i></a>
       <a href="https://www.linkedin.com/in/natallia-stelmakh-29b6001a6/"><i class="fab fa-linkedin"></i></a>
+      <br/>
+      <i class="far fa-copyright"></i>
   </div>
 </footer>
     
