--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
      <!-- here is sticky footer with links on my git and linkedin ,figuring out a problem with overlapping-->
     <footer>
         <div class="container">
+            
+            
             <a href="https://github.com/nata-stelmakh"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/natallia-stelmakh-29b6001a6/"><i class="fab fa-linkedin"></i></a>
+            <br/>
+            <i class="far fa-copyright"></i>
         </div>
     </footer>
 
