--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/b77b17d9f7.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Contact</title>
@@ -30,7 +31,7 @@
       </nav>
     <!-- </div> -->
 </header>
-<div class="container">
+<div   class="container"id ="mainContainer">
   <h2>Contact Me</h2>
   <!-- added form group  -->
   <div class="form-group">
@@ -56,8 +57,7 @@
   <div class="container">
       <a href="https://github.com/nata-stelmakh"><i class="fab fa-github"></i></a>
       <a href="https://www.linkedin.com/in/natallia-stelmakh-29b6001a6/"><i class="fab fa-linkedin"></i></a>
-      <br/>
-      <i class="far fa-copyright"></i>
+       <i class="far fa-copyright"></i>
   </div>
 </footer>
     
