--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/b77b17d9f7.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Portfolio</title>
@@ -24,7 +25,7 @@
           </nav>
     </header>
     <h2>Portfolio</h2>
-    <div class="container">
+    <div class="container" id="mainContainer">
       <!-- List of projects created as cards
       Added alt attributes -->
       <!-- applied grid system -->
@@ -73,11 +74,19 @@
         </div>
       </div>
       
+    
+        </div>
+       </div>
+
+
+
+
+
+
     <footer>
       <div class="container">
           <a href="https://github.com/nata-stelmakh"><i class="fab fa-github"></i></a>
           <a href="https://www.linkedin.com/in/natallia-stelmakh-29b6001a6/"><i class="fab fa-linkedin"></i></a>
-          <br/>
           <i class="far fa-copyright"></i>
       </div>
   </footer>
