--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
        <div class="card" style="width: 18rem;" >
         <img src="https://onplanners.com/sites/default/files/styles/template_fancy/public/template-images/printable-dated-daily-planner-do-list-template_1.png" class="card-img-top" alt="organizer">
         <div class="card-body">
-          <p class="card-text">Daily Organizer</p>
+          <p class="card-text">DAILY ORGANIZER</p>
         </div>
        </div>
       </div>
@@ -42,7 +42,7 @@
       <div class="card" style="width: 18rem;"  >
         <img  src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/poker-pokerchips-dice-cards-gamble-cardgames-strategy-gift-thomas-larch.jpg" class="card-img-top" alt="pile of poker cards">
         <div class="card-body">
-          <p class="card-text">Poker Game</p>
+          <p class="card-text">POKER GAME</p>
         </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="https://images.squarespace-cdn.com/content/v1/575b2f7959827e0c212226ad/1531967209491-V74BZDFN3GPMRB255R7S/ke17ZwdGBToddI8pDm48kGP9fSRXfcN-0p9GcWKw26hZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVEAyM429cUOF-3Nd0Sg076UTt-LI8q9z4xyKSdQS5hmZKeIPHZM_JvY3dXP5Zi8_Xo/Textbooks-Physical-Digital-3.jpg" class="card-img-top" alt="pile of books">
         <div class="card-body">
-          <p class="card-text">Bookstore</p>
+          <p class="card-text">BOOKSTORE</p>
         </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
       <div class="card" style="width: 18rem;" style="height: 18rem;">
         <img src="https://cdn.vox-cdn.com/thumbor/AgVjtGmyeAW6nBmPvnuZSZvp9KE=/0x0:2200x1237/1200x675/filters:focal(612x398:964x750)/cdn.vox-cdn.com/uploads/chorus_image/image/62747737/Habit_Forming.0.png" class="card-img-top" alt="digital organizer">
         <div class="card-body">
-          <p class="card-text">Habit tracker</p>
+          <p class="card-text">HABIT TRACKER</p>
         </div>
       </div>
       </div>
@@ -68,7 +68,7 @@
       <div class="card" style="width: 18rem;">
         <img src="https://cf.geekdo-images.com/opengraph/img/boQN3GndOWetprL1jrrQyPfgRCE=/fit-in/1200x630/pic3809813.jpg" class="card-img-top" alt="cover of a board game">
         <div class="card-body">
-          <p class="card-text">Imaginarium</p>
+          <p class="card-text">IMAGINARIUM</p>
         </div>
         <div class="col-md-4"></div>
         </div>
