--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
          <div class="row">
        <div class="col-md-4">
        <div class="card" style="width: 18rem;" >
-        <img src="https://onplanners.com/sites/default/files/styles/template_fancy/public/template-images/printable-dated-daily-planner-do-list-template_1.png" class="card-img-top" alt="organizer">
+        <img class="card-img-top"  src="https://onplanners.com/sites/default/files/styles/template_fancy/public/template-images/printable-dated-daily-planner-do-list-template_1.png" class="card-img-top" alt="organizer">
         <div class="card-body">
           <p class="card-text">DAILY ORGANIZER</p>
         </div>
@@ -40,7 +40,7 @@
       </div>
       <div class="col-md-4">
       <div class="card" style="width: 18rem;"  >
-        <img  src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/poker-pokerchips-dice-cards-gamble-cardgames-strategy-gift-thomas-larch.jpg" class="card-img-top" alt="pile of poker cards">
+        <img class="card-img-top"  src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/poker-pokerchips-dice-cards-gamble-cardgames-strategy-gift-thomas-larch.jpg" class="card-img-top" alt="pile of poker cards">
         <div class="card-body">
           <p class="card-text">POKER GAME</p>
         </div>
@@ -58,7 +58,7 @@
       <div class="row">
         <div class="col-md-4">
       <div class="card" style="width: 18rem;" style="height: 18rem;">
-        <img src="https://cdn.vox-cdn.com/thumbor/AgVjtGmyeAW6nBmPvnuZSZvp9KE=/0x0:2200x1237/1200x675/filters:focal(612x398:964x750)/cdn.vox-cdn.com/uploads/chorus_image/image/62747737/Habit_Forming.0.png" class="card-img-top" alt="digital organizer">
+        <img class="card-img-top"  src="https://cdn.vox-cdn.com/thumbor/AgVjtGmyeAW6nBmPvnuZSZvp9KE=/0x0:2200x1237/1200x675/filters:focal(612x398:964x750)/cdn.vox-cdn.com/uploads/chorus_image/image/62747737/Habit_Forming.0.png" class="card-img-top" alt="digital organizer">
         <div class="card-body">
           <p class="card-text">HABIT TRACKER</p>
         </div>
@@ -66,7 +66,7 @@
       </div>
       <div class="col-md-4">
       <div class="card" style="width: 18rem;">
-        <img src="https://cf.geekdo-images.com/opengraph/img/boQN3GndOWetprL1jrrQyPfgRCE=/fit-in/1200x630/pic3809813.jpg" class="card-img-top" alt="cover of a board game">
+        <img class="card-img-top" src="https://cf.geekdo-images.com/opengraph/img/boQN3GndOWetprL1jrrQyPfgRCE=/fit-in/1200x630/pic3809813.jpg" class="card-img-top" alt="cover of a board game">
         <div class="card-body">
           <p class="card-text">IMAGINARIUM</p>
         </div>
