--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Figuring out the best way to put my photo -->
     <div class="row">
     <div class="col-sm-6">
-    <img id="MyPhoto" class="thumbnail" src="C:\Users\Dragonfly\Documents\Portfolio\IMG_20200120_100525.jpg" alt="My photo" >
+    <img id="MyPhoto" class="thumbnail" src="IMG_20200120_100525.jpg" alt="My photo" >
      </div>
 
     <div class="col-sm-6">
