Added round photo

--- a/contact.html
+++ b/contact.html
@@ -49,12 +49,12 @@
     <textarea class="form-control" rows="5" id="comment"placeholder="Your message"></textarea>
   </div>
   <!-- Add button to submit -->
-  <button type="button" class="btn btn-outline-success">Submit</button>
+  <button type="button" class="btn btn-outline-secondary">Submit</button>
 </div>
 
 <!-- Added footer -->
 <footer>
-  <div class="container">
+  <div class="container" width="100%">
       <a href="https://github.com/nata-stelmakh"><i class="fab fa-github"></i></a>
       <a href="https://www.linkedin.com/in/natallia-stelmakh-29b6001a6/"><i class="fab fa-linkedin"></i></a>
        <i class="far fa-copyright"></i>
