Added feature open links in a new tab+ edited README

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
          <div class="row">
        <div class="col-md-6">
         <figure class="figure">
-          <a href="https://github.com/nata-stelmakh/Daily-Planner">
+          <a href="https://github.com/nata-stelmakh/Daily-Planner" target="_blank">
           <img  src="assets/Daily_Planner.png"  class="card-img-top" alt="organizer" class="figure-img img-fluid rounded" width="503" height="290" >
           </a>
           <p class="figcaption">DAILY PLANNER</p>
@@ -40,7 +40,7 @@
        </div>
         <div class="col-md-6">
         <figure class="figure">
-          <a href="https://github.com/nata-stelmakh/passw-gen" >
+          <a href="https://github.com/nata-stelmakh/passw-gen" target="_blank">
           <img src="assets/PasswordGenerator.png" class="card-img-top" alt="organizer" class="figure-img img-fluid rounded" width="503" height="290" >
           </a>
           <p class="figcaption">PASSWORD GENERATOR</p>
@@ -51,7 +51,7 @@
       <div class="row">
         <div class="col-md-12">
           <figure class="figure">
-            <a href="https://github.com/nata-stelmakh/PawsCity">
+            <a href="https://github.com/nata-stelmakh/PawsCity" target="_blank">
             <img src="assets/Paws_City.png"  class="card-img-top" alt="organizer" class="figure-img img-fluid rounded" >
             </a>
             <p class="figcaption">PAWS CITY</p>
@@ -61,7 +61,7 @@
     <div class="row">
          <div class="col-md-6">
           <figure class="figure">
-            <a href=href="https://github.com/nata-stelmakh/Weather">
+            <a href=href="https://github.com/nata-stelmakh/Weather" target="_blank">
             <img src="assets/Weather.png"  class="card-img-top" alt="organizer" class="figure-img img-fluid rounded" width="506" height="290"  >
             </a>
             <p class="figcaption">WEATHER</p>
@@ -69,7 +69,7 @@
          </div>
          <div class="col-md-6">
         <figure class="figure">
-          <a href="https://github.com/nata-stelmakh/Quiz">
+          <a href="https://github.com/nata-stelmakh/Quiz" target="_blank">
           <img src="assets/Quiz.png"  class="card-img-top" alt="organizer" class="figure-img img-fluid rounded" width="506" height="290" >
           </a>
            <p class="figcaption">QUIZ</p>
