--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/b77b17d9f7.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Contact</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/b77b17d9f7.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Contact</title>
 </head>
+
 <body>
   <header>
 
@@ -16,54 +19,65 @@
     <h1> Natallia Stelmakh</h1>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span> 
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
 
-             <!-- <span class="navbar-brand mb-0 h1">Natallia Stelmakh</span> -->
-            <a class="nav-item nav-link active" href="index.html">About</a>
-            <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
-            <a class="nav-item nav-link active" href="contact.html">Contact</a>
-         </div>
+          <!-- <span class="navbar-brand mb-0 h1">Natallia Stelmakh</span> -->
+          <a class="nav-item nav-link active" href="index.html">About</a>
+          <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
+          <a class="nav-item nav-link active" href="contact.html">Contact</a>
         </div>
-      </nav>
+      </div>
+    </nav>
     <!-- </div> -->
-</header>
-<div   class="container"id ="mainContainer">
-  <h2>Contact Me</h2>
-  <!-- added form group  -->
-  <div class="form-group">
-    <label for="usr">Name:</label>
-    <input type="text" class="form-control" id="usr" placeholder="Name">
-  </div>
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Your Email">
-    <div class="input-group-append">
-      <span class="input-group-text">@example.com</span>
+  </header>
+  <div class="container" id="mainContainer">
+    <h2>Contact Me</h2>
+    <!-- added form group  -->
+    <p>Contact me by:</p>
+    <p><a href="mailto:stelmakh.natallia@gmail.com">Email: stelmakh.natallia@gmail.com</a></p>
+    <p>Phone :+1-973-7506535</p>
+    <div class="form-group">
+      <label for="usr">Name:</label>
+      <input type="text" class="form-control" id="usr" placeholder="Name">
     </div>
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="Your Email">
+      <div class="input-group-append">
+        <span class="input-group-text">@example.com</span>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="comment">Message:</label>
+      <textarea class="form-control" rows="5" id="comment" placeholder="Your message"></textarea>
+    </div>
+    <!-- Add button to submit -->
+    <button type="button" class="btn btn-outline-secondary">Submit</button>
   </div>
-  <div class="form-group">
-    <label for="comment">Message:</label>
-    <textarea class="form-control" rows="5" id="comment"placeholder="Your message"></textarea>
-  </div>
-  <!-- Add button to submit -->
-  <button type="button" class="btn btn-outline-secondary">Submit</button>
-</div>
 
-<!-- Added footer -->
-<footer>
-  <div class="container" width="100%">
+  <!-- Added footer -->
+  <footer>
+    <div class="container" width="100%">
       <a href="https://github.com/nata-stelmakh"><i class="fab fa-github"></i></a>
       <a href="https://www.linkedin.com/in/natallia-stelmakh-29b6001a6/"><i class="fab fa-linkedin"></i></a>
-       <i class="far fa-copyright"></i>
-  </div>
-</footer>
-    
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
