Images now are links to deployed apps and added links to github repositories

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,60 +37,79 @@
     <div class="row">
       <div class="col-md-6">
         <figure class="figure">
-          <a href="https://github.com/nata-stelmakh/eat-da-burger" target="_blank">
+          <a href="https://powerful-garden-33648.herokuapp.com/" target="_blank">
             <img src="assets/burger.png" class="card-img-top" alt="organizer" class="figure-img img-fluid rounded"
               width="503" height="290">
           </a>
           <p class="figcaption">EAT-DA-BURGER</p>
+          <a href="https://github.com/nata-stelmakh/eat-da-burger">
+            <p class="link">github</p>
+          </a>
         </figure>
+
       </div>
       <div class="col-md-6">
         <figure class="figure">
-          <a href="https://github.com/nata-stelmakh/template-engine" target="_blank">
+          <a href="https://drive.google.com/file/d/1wJbUxBE29dOEGVJgyiRPtR_E7BQ121Cw/view" target="_blank">
             <img src="assets/team.png" class="card-img-top" alt="organizer" class="figure-img img-fluid rounded"
               width="503" height="290">
           </a>
           <p class="figcaption">TEAM GENERATOR</p>
+          <a href="https://github.com/nata-stelmakh/template-engine">
+            <p class="link">github</p>
+          </a>
         </figure>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <figure class="figure">
-          <a href="https://github.com/nata-stelmakh/PawsCity" target="_blank">
+          <a href="https://nata-stelmakh.github.io/PawsCity/" target="_blank">
             <img src="assets/Paws_City.png" class="card-img-top" alt="organizer" class="figure-img img-fluid rounded">
           </a>
           <p class="figcaption">PAWS CITY</p>
+          <a href="https://github.com/nata-stelmakh/PawsCity">
+            <p class="link">github</p>
+          </a>
         </figure>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <figure class="figure">
-          <a href="https://github.com/HexiangLiu/Snaps-Coffe" target="_blank">
+          <a href="https://morning-hamlet-29390.herokuapp.com/" target="_blank">
             <img src="assets/snaps.png" class="card-img-top" alt="organizer" class="figure-img img-fluid rounded">
           </a>
           <p class="figcaption">SNAPS COFFEE SHOP</p>
+          <a href="https://github.com/HexiangLiu/Snaps-Coffe">
+            <p class="link">github</p>
+          </a>
         </figure>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
         <figure class="figure">
-          <a href=href="https://github.com/nata-stelmakh/Weather" target="_blank">
+          <a href="https://nata-stelmakh.github.io/Weather/" target="_blank">
             <img src="assets/Weather.png" class="card-img-top" alt="organizer" class="figure-img img-fluid rounded"
               width="506" height="290">
           </a>
           <p class="figcaption">WEATHER</p>
+          <a href="https://github.com/nata-stelmakh/Weather">
+            <p class="link">github</p>
+          </a>
         </figure>
       </div>
       <div class="col-md-6">
         <figure class="figure">
-          <a href="https://github.com/nata-stelmakh/Quiz" target="_blank">
+          <a href="https://nata-stelmakh.github.io/Quiz/" target="_blank">
             <img src="assets/Quiz.png" class="card-img-top" alt="organizer" class="figure-img img-fluid rounded"
               width="506" height="290">
           </a>
           <p class="figcaption">QUIZ</p>
+          <a href="https://github.com/nata-stelmakh/Quiz">
+            <p class="link">github</p>
+          </a>
         </figure>
       </div>
     </div>
@@ -98,20 +117,26 @@
     <div class="row">
       <div class="col-md-6">
         <figure class="figure">
-          <a href="https://github.com/nata-stelmakh/Daily-Planner" target="_blank">
+          <a href="https://nata-stelmakh.github.io/Daily-Planner/" target="_blank">
             <img src="assets/Daily_Planner.png" class="card-img-top" alt="organizer"
               class="figure-img img-fluid rounded" width="503" height="290">
           </a>
           <p class="figcaption">DAILY PLANNER</p>
+          <a href="https://github.com/nata-stelmakh/Daily-Planner">
+            <p class="link">github</p>
+          </a>
         </figure>
       </div>
       <div class="col-md-6">
         <figure class="figure">
-          <a href="https://github.com/nata-stelmakh/passw-gen" target="_blank">
+          <a href="https://nata-stelmakh.github.io/passw-gen/" target="_blank">
             <img src="assets/PasswordGenerator.png" class="card-img-top" alt="organizer"
               class="figure-img img-fluid rounded" width="503" height="290">
           </a>
           <p class="figcaption">PASSWORD GENERATOR</p>
+          <a href="https://github.com/nata-stelmakh/passw-gen">
+            <p class="link">github</p>
+          </a>
         </figure>
       </div>
     </div>
